[gd_scene load_steps=2 format=3 uid="uid://dvqo6smjfsr0l"]

[ext_resource type="Script" uid="uid://8fe5vbpv8jdd" path="res://screens/character_creation/character_creation.gd" id="1_bwhwb"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwhwb")

[node name="CreationPanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 202.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CreationPanelContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="CreationPanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Character Name"

[node name="CreateButton" type="Button" parent="CreationPanelContainer/VBoxContainer"]
layout_mode = 2
text = "Create Character"

[node name="StatusLabel" type="Label" parent="CreationPanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CreationPanelContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
